--- a/Example/self.css
+++ b/Example/self.css
@@ -1,3 +1,3 @@
-.jumbotron{
-
-}
+a:link { color: white; text-decoration: none;}
+a:visited { color: white; text-decoration: none;}
+a:hover { color: white; text-decoration: underline;}
